--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "mocha": "^4.0.1"
   },
   "scripts": {
-    "test": "nodemon --exec mocha --recursive -R min"
+    "test": "nodemon --exec mocha --recursive -R min",
+    "server": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "express": "^4.16.2",
     "mongoose": "^4.13.7"
   }
 }
