--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "supertest": "^3.0.0"
   },
   "scripts": {
-    "test": "nodemon --exec mocha --recursive -R min",
+    "test": "NODE_ENV=test nodemon --exec mocha --recursive -R min",
     "server": "nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -18,6 +18,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.7"
