--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.13.7"
+    "mongoose": "^4.13.7",
+    "validator": "^9.2.0"
   }
 }
